fixed right click bug in firefox, not ie, fixed alignment issues.

--- a/src/css/modal/modal.css
+++ b/src/css/modal/modal.css
@@ -9,32 +9,38 @@
 	top: 60px;
 	background-color: white;
 	z-index: 10001;
-	width: 60%;
+	width: 95%;
 	padding: 12px;
 	min-height: 30%;
-	left: 20%;
+	left: 2.5%;
 	box-shadow: 0 0 9px rgba(0,0,0,.5);
 	-moz-box-shadow: 0 0 9px rgba(0,0,0,.5);
 	-webkit-box-shadow: 0 0 9px rgba(0,0,0,.5);
 }
 
-.modal.md{
-	width: 70%;
-	left: 15%;
+@media (min-width: 992px){
+	.modal{
+		width: 60%;
+		left: 20%;
+	}
+	.modal.md{
+		width: 70%;
+		left: 15%;
+	}
+
+	.modal.lg{
+		width: 80%;
+		left: 10%;
+	}
+
+	.modal.xl{
+		left: 10px;
+		right: 10px;
+		width: auto;
+	}
 }
 
-.modal.lg{
-	width: 80%;
-	left: 10%;
-}
-
-.modal.xl{
-	left: 10px;
-	right: 10px;
-	width: auto;
-}
-
-.modal *{
+.modal *, .modal{
 	-webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
